compiler/tests/safety/success/arm-m4/align.jazz
export
fn main(reg u32 pt) -> reg u32 {
  reg u32 tmp;
  stack u256 tmp256;

  tmp = [:u32 pt + 0];
  tmp = [:u32 pt + 4];
  tmp = [:u32 pt + 12];

  tmp256 = [:u256 pt + 0];
  tmp256 = [:u256 pt + 32];
  return tmp;
}
